kubernetes/gabernetes/apps/geoip/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-geoip
spec:
  endpointSelector:
    matchLabels:
      policy.gabe565.com/egress-geoip: "true"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: geoip
            app.kubernetes.io/name: geoip
      toPorts:
        - ports:
            - port: "8080"
            - port: "8081"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: geoip
  namespace: geoip
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: geoip
  ingress:
    - fromEndpoints:
        - matchLabels:
            policy.gabe565.com/egress-geoip: "true"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
